src/info-body.css
#character-visuals {
    align-self: flex-end;
}

#info-body {
    gap: var(--gap);
    width: 100%;
    min-width: 0;
}

#character-info {
    margin-bottom: calc(var(--gap));

    .input-row {
        gap: calc(var(--gap) / 2);

        label {
            margin-bottom: 0;
            margin-top: 9px;
        }

        input[type="text"] {
            flex: 1 1 auto;
            font-size: 20pt;
            /*text-align: center;*/
        }
    }
}

#character-body,
#character-mind,
#character-social,
#character-priorities {
    > .row {
        gap: var(--gap);
        justify-content: space-between;
        min-width: 0;

        > .column {
            min-width: 0;
        }
    }
}

#character-body {
    --radio-group-width: calc((17.5px * 5) + (2px * 4));

    .radio-input-container {
        flex: 0 1 var(--radio-group-width);
    }

    input[type="text"] {
        flex: 0 1 var(--radio-group-width);
        min-width: 0;
    }

    .input-row-left-column .input-row label {
        flex-basis: 9ch;
    }
    .input-row-right-column .input-row label {
        flex-basis: 7ch;
    }
}

#character-mind {
    .input-row-left-column .input-row label {
        flex-basis: 12ch;
    }
    .input-row-right-column .input-row label {
        flex-basis: 8ch;
    }
}

#character-social {
    .input-row-left-column .input-row label {
        flex-basis: 8ch;
    }
    .input-row-mid-column .input-row label,
    .input-row-right-column .input-row label {
        flex-basis: 10ch;
    }
}

#character-priorities {
    .input-row-left-column .input-row label {
        flex-basis: 7ch;
    }
    .input-row-right-column .input-row label {
        flex-basis: 13ch;
    }
    .special-label {
        letter-spacing: -2px;
    }
    .special-s {
        letter-spacing: -3px;
    }

    .special-apostrophe {
        letter-spacing: -6px;
    }
}

#character-skills {
    .input-row label {
        flex-basis: 18ch;
    }
}

#character-beliefs {
    .input-row label {
        flex-basis: 12ch;
    }
}

@media (min-width: 768px) {
    #info-body {
        flex: 1 1 0;
        width: auto;
    }

    #character-info {
        .input-row {
            font-size: 24pt;
            label {
                margin-top: 0;
            }
        }
    }
}

